rectifying errors obtained in heroku push

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "reactstrap": "^8.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
